improve: make Dashboard continue-study cards note-aware and mode-aware
- Expanded the dashboard continue-studying response to include `noteTitle`, `subject`, optional `courseProgram`, and backend-owned `resumeType`.
- Updated dashboard recommendation logic to resume the newest valid in-progress Quick Review, Challenge Quiz, or Adaptive Practice session from a single API response.
- Redesigned the Continue Studying card so the note title is prominent, metadata is visible, progress stays compact, and the resume action routes to the correct quiz mode.
- Added targeted backend/frontend regression coverage for note metadata, challenge/adaptive resume types, and dashboard resume routing.
- Updated product, feature, testing, and agent docs to lock the note-aware Continue Studying rule and created the missing dashboard/quiz-session docs.